UI & UX Improvements - Game Module
